<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nome_">Nome:</string>
    <string name="receber_provas">Baixar Provas</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="mapa">Mapa</string>
    <string name="novo">Novo</string>
    <string name="preferencias">Preferências</string>
    <string name="imagem">imagem</string>
    <string name="site_label">Site:</string>
    <string name="endereco_label">Endereço:</string>
    <string name="telefone_label">Telefone:</string>
    <string name="nota_label">Nota:</string>
    <string name="gravar">Gravar</string>
    <string name="title_activity_recebe_provas">RecebeProvas</string>

</resources>
