<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="vertical">

		<ImageView android:id="@+id/imagem"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:src="@drawable/ic_launcher"
			android:contentDescription="@string/imagem" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/nome_" />

		<EditText android:id="@+id/nome"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:ems="10"
			android:inputType="text">

			<requestFocus />
		</EditText>

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/site_label" />

		<EditText android:id="@+id/site"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:ems="10"
			android:inputType="text" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/endereco_label" />

		<EditText android:id="@+id/endereco"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:ems="10"
			android:inputType="text" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/telefone_label" />

		<EditText android:id="@+id/telefone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:ems="10"
			android:inputType="phone" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nota_label" />

		<RatingBar
		    android:id="@+id/nota"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:numStars="5" />

		<Button android:id="@+id/botao"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/gravar" />

	</LinearLayout>
</ScrollView>
